[ADD]增加新的功能
