# models/init.go
@@ -2,12 +2,6 @@ package models
 
 import "github.com/beego/beego/v2/client/orm"
 
-type Json struct {
-	Flag    bool        `json:"flag"`
-	Message string      `json:"message"`
-	Data    interface{} `json:"data"`
-}
-
 type User struct {
 	Id       int    `json:"id"`
 	Username string `json:"username"`
@@ -16,8 +10,24 @@ type User struct {
 	Password string `json:"password"`
 }
 
+type Goods struct {
+	Id    int    `json:"id"`
+	Name  string `json:"name"`
+	Price int    `json:"price"`
+	Color string `json:"color"`
+	Stock int    `json:"stock"`
+}
+
+type Cart struct {
+	Id       int    `json:"id"`
+	Username string `json:"username"`
+	GoodsId  int    `json:"goods_id"`
+	Amount   int    `json:"amount"`
+	Price    int    `json:"price"`
+}
+
 func init() {
 	orm.RegisterModel(
-		new(User),
+		new(User), new(Goods), new(Cart),
 	)
 }
